--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# sublime project && workspace
+*.sublime-project
+*.sublime-workspace
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
