Add SO,a telegram bot, Phone number checking...

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # sublime project && workspace
 *.sublime-project
 *.sublime-workspace
+
+# database
+*.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
